syntax = "proto3";

//option go_package = "path;name";
//path 表示生成的go文件的存放地址，会自动生成目录的。
//name 表示生成的go文件所属的包名
option go_package = "./;proto";
// 定义包名
package proto;


service Account {
  rpc Auth (Request) returns (Reply) {}
}

// 定义消息
message Request {
  string productName = 1;
  string productVersion = 2;
  string buffID = 3;
}

message Reply {
  string productVersion = 1;
  string expireTime = 2;
  int64 expireSec = 3;
  string AccountID = 4;
  // 通知
  string notice = 5;
}